Fix stretched-links
'position: relative' is needed in the surrounding container,
but that was removed in bootstrap 5 from the row class

--- a/src/main/webapp/app/course/manage/overview/course-management-exercise-row.scss
+++ b/src/main/webapp/app/course/manage/overview/course-management-exercise-row.scss
@@ -158,6 +158,10 @@
         font-size: large;
         margin-left: 5px;
     }
+
+    .details-container {
+        position: relative;
+    }
 }
 
 @media screen and (max-width: 1925px) {
